[metadata]
name = simple_tsdb
version = 0.9.6
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Python code for accessing simple_tsdb databases.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = simple_tsdb
url = https://github.com/tgree/simple_tsdb
license = MIT
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8.10
install_requires =
    numpy
packages =
    simple_tsdb

[options.entry_points]
console_scripts =
